# KiroaaS

./: .gitignore  README.md  build-macos.sh  build-windows.ps1  index.html  latest.json.example  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
docs/: BUILD_INSTRUCTIONS.md  README_es.md  README_id.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh.md  UPDATE_IMPLEMENTATION.md
python-backend/: main.py
python-backend/kiro/: auth.py
releases/: latest.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  conversations.rs  main.rs  server.rs
src/components/: AdvancedSettings.tsx  ApiExamples.tsx  CCSwitchImport.tsx  ChatView.tsx  ConversationSidebar.tsx  LanguageSwitcher.tsx  LogViewer.tsx  ServerControl.tsx  SettingsForm.tsx  UpdateChecker.tsx.example  UsageCard.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  input.tsx  select.tsx
src/hooks/: useConfig.ts  useConversations.ts  useI18n.tsx  useServerStatus.ts
src/lib/: config.ts  conversations.ts  i18n.ts  tauri.ts  versionCheck.ts
