[package]
name = "kiroaas"
version = "1.0.0"
description = "KiroaaS Desktop App"
authors = ["KiroaaS Team"]
license = "AGPL-3.0"
repository = "https://github.com/hnewcity/KiroaaS"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "window-start-dragging", "fs-write-file", "fs-read-file", "fs-create-dir", "dialog-save", "dialog-open", "fs-read-dir", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
libc = "0.2.180"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
